--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-Under Constuction (check back later)
+<html>
+   <style>
+  table{background:red;}
+  th{background:blue;}
+  td{background:yellow;}
+  h6{color:white}
+ </style>
+  <body> 
+    <table>
+ <tr> 
+ <th>links</th> 
+   <td><a href='https://gameboss420.github.io/twf-part-1-repo/index.html'>part 1</a></td> 
+   <td><a href='https://gameboss420.github.io/twf-part-2-repo/index.html'>part 2</a></td>
+   <td><a href='https://gameboss420.github.io/twf-part-3-repo/index.html'>part 3</a></td>
+   <td><a href='https://gameboss420.github.io/twf-part-4-repo/index.html'>part 4</a</td>
+   <td><b href='https://gameboss420.github.io/twf-video/index.html'>videos</b></td>
+ </tr>
+ </table>
+ <table>
+   <th>today is...</th>
+      <td><iframe src="https://free.timeanddate.com/clock/i855t7m4/n809/fn7/tct/pct/ftbi/tt0/tw1/tm1/th2" frameborder="0" width="250" height="21" allowtransparency="true"></iframe></td>
+ </table>
+<table>
+ <tr> 
+ <th>videos</th>
+ </tr>
+  <tr> 
+   <td><a href='StarWars.html'> Star Wars </a></td>
+ </tr>
+   <tr> 
+   <td><a href='coconutnut.html'> coconut nut song  </a></td>
+ </tr>
+  <tr> 
+   <td><a href='7.html'> Never Gonna Give you Up </a></td>
+ </tr>
+  <tr> 
+   <td><a href='A Request.html'>pepedodo minecraft song (requested song) </a></td>
+ </tr>
+  <tr> 
+   <td><a href='A Request 2.html'>brofist song (requested song) </a></td>
+ </tr>
+  <tr> 
+   <td><a href='A Request 3.html'>space is cool song (requested song) </a></td>
+ </tr>
+  <tr> 
+   <td><a href='A Request 4.html'>jse all the way song (requested song) </a></td>
+ </tr>
+   <tr> 
+   <td><a href='9.html'> some rando eating potato salad. (sus) (gone wrong) (gone sexual) (requested video) </a></td>
+ </tr>
+    <tr> 
+   <td><a href='10.html'>south park: rainforest</a></td>
+ </tr>
+    <tr> 
+   <td><a href='11.html'> south park: brown noise  </a></td>
+ </tr>
+    <tr> 
+   <td><a href='12.html'> south park roshambo </a></td>
+ </tr>
+    <tr> 
+   <td><a href='13.html'> rando strikes again this time with their cat (gone sexual) (requested video) </a></td>
+ </tr>
+     <tr> 
+   <td><a href='14.html'> kid goes down stairs and does a scream (gone sexual) </a></td>
+ </tr> 
+     <tr> 
+   <td><a href='15.html'> kid comes out of closet and their parents flip </a></td>
+ </tr>
+  <tr> 
+   <td><a href='26.html'> 30 mins of memes </a></td>
+ </tr>
+   <tr> 
+   <td><a href='27.html'> everyday normal guy (Requested song)</a></td>
+ </tr>
+    <tr> 
+   <td><a href='iraq.html'> Iraq Lobster (Requested song) </a></td>
+ </tr>
+   <tr> 
+   <td><a href='lobster.html'> Iraq Lobster bass boosted (Requested song)</a></td>
+ </tr> 
+  <tr> 
+   <td><a href='A Request 5.html'> Some video (Requested Video)</a></td>
+ </tr>
+    <tr> 
+   <td><a href='waffles.html'> Do you like Waffles? (Requested Video)</a></td>
+ </tr>
+   </table>
+  </body>
+</html>
