--- a/index.html
+++ b/index.html
@@ -25,64 +25,64 @@
  <th>videos</th>
  </tr>
   <tr> 
-   <td><a href='StarWars.html'> Star Wars </a></td>
+   <td><a href='1.html'> Star Wars </a></td>
  </tr>
    <tr> 
-   <td><a href='coconutnut.html'> coconut nut song  </a></td>
+   <td><a href='2.html'> coconut nut song  </a></td>
  </tr>
   <tr> 
-   <td><a href='7.html'> Never Gonna Give you Up </a></td>
+   <td><a href='3.html'> Never Gonna Give you Up </a></td>
  </tr>
   <tr> 
-   <td><a href='A Request.html'>pepedodo minecraft song (requested song) </a></td>
+   <td><a href='4.html'>pepedodo minecraft song (requested song) </a></td>
  </tr>
   <tr> 
-   <td><a href='A Request 2.html'>brofist song (requested song) </a></td>
+   <td><a href='5.html'>brofist song (requested song) </a></td>
  </tr>
   <tr> 
-   <td><a href='A Request 3.html'>space is cool song (requested song) </a></td>
+   <td><a href='6.html'>space is cool song (requested song) </a></td>
  </tr>
   <tr> 
-   <td><a href='A Request 4.html'>jse all the way song (requested song) </a></td>
+   <td><a href='7.html'>jse all the way song (requested song) </a></td>
  </tr>
    <tr> 
-   <td><a href='9.html'> some rando eating potato salad. (sus) (gone wrong) (gone sexual) (requested video) </a></td>
+   <td><a href='8.html'> some rando eating potato salad. (sus) (gone wrong) (gone sexual) (requested video) </a></td>
  </tr>
     <tr> 
-   <td><a href='10.html'>south park: rainforest</a></td>
+   <td><a href='9.html'>south park: rainforest</a></td>
  </tr>
     <tr> 
-   <td><a href='11.html'> south park: brown noise  </a></td>
+   <td><a href='10.html'> south park: brown noise  </a></td>
  </tr>
     <tr> 
-   <td><a href='12.html'> south park roshambo </a></td>
+   <td><a href='11.html'> south park roshambo </a></td>
  </tr>
     <tr> 
-   <td><a href='13.html'> rando strikes again this time with their cat (gone sexual) (requested video) </a></td>
+   <td><a href='12.html'> rando strikes again this time with their cat (gone sexual) (requested video) </a></td>
  </tr>
      <tr> 
-   <td><a href='14.html'> kid goes down stairs and does a scream (gone sexual) </a></td>
+   <td><a href='13.html'> kid goes down stairs and does a scream (gone sexual) </a></td>
  </tr> 
      <tr> 
-   <td><a href='15.html'> kid comes out of closet and their parents flip </a></td>
+   <td><a href='14.html'> kid comes out of closet and their parents flip </a></td>
  </tr>
   <tr> 
-   <td><a href='26.html'> 30 mins of memes </a></td>
+   <td><a href='15.html'> Empty (will be used sometime) </a></td>
  </tr>
    <tr> 
-   <td><a href='27.html'> everyday normal guy (Requested song)</a></td>
+   <td><a href='16.html'> everyday normal guy (Requested song)</a></td>
  </tr>
     <tr> 
-   <td><a href='iraq.html'> Iraq Lobster (Requested song) </a></td>
+   <td><a href='17.html'> Iraq Lobster (Requested song) </a></td>
  </tr>
    <tr> 
-   <td><a href='lobster.html'> Iraq Lobster bass boosted (Requested song)</a></td>
+   <td><a href='18.html'> Iraq Lobster bass boosted (Requested song)</a></td>
  </tr> 
   <tr> 
-   <td><a href='A Request 5.html'> Some video (Requested Video)</a></td>
+   <td><a href='19.html'> Some video (Requested Video)</a></td>
  </tr>
     <tr> 
-   <td><a href='waffles.html'> Do you like Waffles? (Requested Video)</a></td>
+   <td><a href='20.html'> Do you like Waffles? (Requested Video)</a></td>
  </tr>
    </table>
   </body>
