--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
   h6{color:white}
  </style>
 <body>
-<a href='owner_only/hey.html'> <h6>nut</h6> </a>
+<a href='gameboss42.github.io/twf-owner-only/hey.html'> <h6>-</h6> </a>
  <table>
  <tr> 
  <th>go back</th>
@@ -19,7 +19,7 @@
 
    </table>
 <p><video autoplay controls loop
-        src="coco.mp4"></video> </p>
+        src="2.mp4"></video> </p>
 
   </body>
 </html>
