--- a/2.html
+++ b/2.html
@@ -6,14 +6,13 @@
   h6{color:white}
  </style>
 <body>
-<a href='gameboss42.github.io/twf-owner-only/hey.html'> <h6>-</h6> </a>
  <table>
  <tr> 
  <th>go back</th>
  </tr>
 
   <tr> 
-   <td><a href='index.html'> home</a></td>
+   <td><a href='index.html'> home</a><a href='gameboss42.github.io/twf-owner-only/hey.html'> <h6>.</h6> </a></td>
  </tr>
 
 
