--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <td><a href='https://gameboss420.github.io/twf-part-2-repo/index.html'>part 2</a></td>
    <td><a href='https://gameboss420.github.io/twf-part-3-repo/index.html'>part 3</a></td>
    <td><a href='https://gameboss420.github.io/twf-part-4-repo/index.html'>part 4</a</td>
-   <td><b href='https://gameboss420.github.io/twf-video/index.html'>videos</b></td>
+   <td><b href='https://gameboss420.github.io/twf-videos/index.html'>videos</b></td>
  </tr>
  </table>
  <table>
