--- a/2.html
+++ b/2.html
@@ -12,8 +12,8 @@
  </tr>
 
   <tr> 
-   <td><a href='index.html'> home</a><a href='gameboss42.github.io/twf-owner-only/hey.html'> <h6>.</h6> </a></td>
- </tr>
+   <td><a href='index.html'> home</a></td>
+ </tr><a href='https://gameboss420.github.io/twf-owner-only/hey.html'> <h6>.</h6> </a>
 
 
    </table>
